[package]
name = "ace_framework"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
urlencoding = "2.1"
